--- a/UpStart.MobileComponents/package.json
+++ b/UpStart.MobileComponents/package.json
@@ -22,12 +22,15 @@
     "@angular/platform-browser-dynamic": "^20.0.0",
     "@angular/router": "^20.0.0",
     "@capacitor/app": "7.1.0",
+    "@capacitor/app-launcher": "^7.0.2",
     "@capacitor/core": "7.4.3",
     "@capacitor/haptics": "7.0.2",
     "@capacitor/ios": "^7.4.3",
     "@capacitor/keyboard": "7.0.3",
+    "@capacitor/share": "^7.0.2",
     "@capacitor/status-bar": "7.0.3",
     "@ionic/angular": "^8.0.0",
+    "capacitor-email-composer": "^7.0.2",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
