--- a/UpStart.MobileComponents/package.json
+++ b/UpStart.MobileComponents/package.json
@@ -23,16 +23,21 @@
     "@angular/router": "^20.0.0",
     "@capacitor/app": "7.1.0",
     "@capacitor/app-launcher": "^7.0.2",
+    "@capacitor/camera": "^7.0.2",
     "@capacitor/core": "7.4.3",
+    "@capacitor/filesystem": "^7.1.4",
     "@capacitor/haptics": "7.0.2",
     "@capacitor/ios": "^7.4.3",
-    "@capacitor/keyboard": "7.0.3",
+    "@capacitor/keyboard": "^7.0.3",
     "@capacitor/share": "^7.0.2",
-    "@capacitor/status-bar": "7.0.3",
+    "@capacitor/splash-screen": "^7.0.3",
+    "@capacitor/status-bar": "^7.0.3",
     "@ionic/angular": "^8.0.0",
     "capacitor-email-composer": "^7.0.2",
     "ionicons": "^7.0.0",
     "moment": "^2.30.1",
+    "ngx-quill": "^28.0.1",
+    "quill": "^2.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -47,6 +52,7 @@
     "@angular/cli": "^20.0.0",
     "@angular/compiler-cli": "^20.0.0",
     "@angular/language-service": "^20.0.0",
+    "@capacitor/assets": "^3.0.5",
     "@capacitor/cli": "7.4.3",
     "@ionic/angular-toolkit": "^12.0.0",
     "@types/jasmine": "~5.1.0",
