--- a/UpStart.MobileComponents/package.json
+++ b/UpStart.MobileComponents/package.json
@@ -25,6 +25,7 @@
     "@capacitor/app-launcher": "^7.0.2",
     "@capacitor/camera": "^7.0.2",
     "@capacitor/core": "7.4.3",
+    "@capacitor/file-viewer": "^1.0.5",
     "@capacitor/filesystem": "^7.1.4",
     "@capacitor/haptics": "7.0.2",
     "@capacitor/ios": "^7.4.3",
@@ -34,9 +35,11 @@
     "@capacitor/status-bar": "^7.0.3",
     "@ionic/angular": "^8.0.0",
     "capacitor-email-composer": "^7.0.2",
+    "html-to-pdfmake": "^2.5.31",
     "ionicons": "^7.0.0",
     "moment": "^2.30.1",
     "ngx-quill": "^28.0.1",
+    "pdfmake": "^0.2.20",
     "quill": "^2.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -56,6 +59,7 @@
     "@capacitor/cli": "7.4.3",
     "@ionic/angular-toolkit": "^12.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/pdfmake": "^0.2.11",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
     "eslint": "^9.16.0",
