--- a/UpStart.MobileComponents/package.json
+++ b/UpStart.MobileComponents/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^20.0.0",
     "@angular/platform-browser-dynamic": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@capacitor-community/sqlite": "^7.0.2",
     "@capacitor/app": "7.1.0",
     "@capacitor/app-launcher": "^7.0.2",
     "@capacitor/camera": "^7.0.2",
@@ -37,6 +38,7 @@
     "capacitor-email-composer": "^7.0.2",
     "html-to-pdfmake": "^2.5.31",
     "ionicons": "^7.0.0",
+    "jeep-sqlite": "^2.8.0",
     "moment": "^2.30.1",
     "ngx-quill": "^28.0.1",
     "pdfmake": "^0.2.20",
