--- a/UpStart.MobileComponents/package.json
+++ b/UpStart.MobileComponents/package.json
@@ -36,10 +36,12 @@
     "@capacitor/status-bar": "^7.0.3",
     "@ionic/angular": "^8.0.0",
     "capacitor-email-composer": "^7.0.2",
+    "echarts": "^6.0.0",
     "html-to-pdfmake": "^2.5.31",
     "ionicons": "^7.0.0",
     "jeep-sqlite": "^2.8.0",
     "moment": "^2.30.1",
+    "ngx-echarts": "^20.0.2",
     "ngx-quill": "^28.0.1",
     "pdfmake": "^0.2.20",
     "quill": "^2.0.3",
